--- a/demo/src/main/resources/templates/html/backup.html
+++ b/demo/src/main/resources/templates/html/backup.html
@@ -1,153 +1,198 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta http-equiv="Content-Type" content="text/html" >
+    <title>Cadastro do Dono Pet</title>
+   
+<link href="/materialize/bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <title>Pets</title>
-
-  <link href="/materialize/bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
       }
-    }
 
-    .b-example-divider {
-      height: 3rem;
-      background-color: rgba(0, 0, 0, .1);
-      border: solid rgba(0, 0, 0, .15);
-      border-width: 1px 0;
-      box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-    }
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
 
-    .b-example-vr {
-      flex-shrink: 0;
-      width: 1.5rem;
-      height: 100vh;
-    }
+      .b-example-divider {
+        height: 3rem;
+        background-color: rgba(0, 0, 0, .1);
+        border: solid rgba(0, 0, 0, .15);
+        border-width: 1px 0;
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+      }
 
-    .bi {
-      vertical-align: -.125em;
-      fill: currentColor;
-    }
+      .b-example-vr {
+        flex-shrink: 0;
+        width: 1.5rem;
+        height: 100vh;
+      }
 
-    .nav-scroller {
-      position: relative;
-      z-index: 2;
-      height: 2.75rem;
-      overflow-y: hidden;
-    }
+      .bi {
+        vertical-align: -.125em;
+        fill: currentColor;
+      }
 
-    .nav-scroller .nav {
-      display: flex;
-      flex-wrap: nowrap;
-      padding-bottom: 1rem;
-      margin-top: -1px;
-      overflow-x: auto;
-      text-align: center;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-    }
-  </style>
+      .nav-scroller {
+        position: relative;
+        z-index: 2;
+        height: 2.75rem;
+        overflow-y: hidden;
+      }
 
+      .nav-scroller .nav {
+        display: flex;
+        flex-wrap: nowrap;
+        padding-bottom: 1rem;
+        margin-top: -1px;
+        overflow-x: auto;
+        text-align: center;
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
+      }
+    </style>
 
-  <!-- Custom styles for this template -->
-  <link href="form-validation.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</head>
-
-<body class="bg-light"></body>
-<header class="p-3 mb-3 border-bottom">
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-          <use xlink:href="#bootstrap" />
-        </svg>
-      </a>
-
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="../html/paginainicial.html" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="../html/sobrenos.html" class="nav-link px-2 link-dark">Sobre Nós</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Parceiros</a></li>
-      </ul>
-
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Login
-        </button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Parceiro</a></li>
-          <li><a class="dropdown-item" href="#">Dono Pet</a></li>
-        </ul>
+    
+    <!-- Custom styles for this template -->
+    <link href="form-validation.css" rel="stylesheet">
+    <script type="text/javascript" src="js/jquery-1.2.6.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </head>
+  <body class="bg-light">
+    <header class="p-3 mb-3 border-bottom">
+      <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+          <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+            <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+              <use xlink:href="#bootstrap" />
+            </svg>
+          </a>
+  
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="../html/paginainicial.html" class="nav-link px-2  link-dark">Home</a></li>
+            <li><a href="../html/sobrenos.html" class="nav-link px-2 link-dark">Sobre Nós</a></li>
+            <li><a href="#" class="nav-link px-2 link-dark">Parceiros</a></li>
+          </ul>
+  
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Login
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Parceiro</a></li>
+              <li><a class="dropdown-item" href="#">Dono Pet</a></li>
+            </ul>
+          </div>
+  
       </div>
+    </header>
+    
+    <div class="py-5 text-center">
+      <h2>Cadastro do Dono Pet</h2>
 
-    </div>
-</header>
-
+    <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#JanelaModal" type="button">
+      Cadastrar
+  </button>
+</div>
 <div class="container">
-  <div class="row g-3">
-    <div class="col-sm">
-      <h2>Pet</h2>
-    </div>
-    <div class="col-auto">
-      <a class="btn btn-primary" th:href="@{inserirPet}">
-        <i class="fas fa-edit"></i>Cadatrar </a>
-    </div>
-    <div class="row g-1">
-      <div class="col-sm">
-        <input type="search" class="form-control" id="pesquisaPet" placeholder="Pesquisa">
+
+  <main>
+<!--Inicio da modal-->
+    <div id = "JanelaModal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+
+              <div class="modal-header">
+                  <h3 class="modal-title">Cadastro dono do PET</h3>
+                  <button type="button" class="btn btn-close" data-bs-dismiss="modal"></button>
+              </div>
+              <div class="modal-body">
+                      <form method="post" th:action="InsertDonoPet" th:object="${DonoPet}" class="needs-validation" novalidate>
+                          <div class="form-group">
+                            <label for="nomeDonoPet" class="form-label">Nome Completo</label>
+                            <input type="text" class="form-control" id="nomeDonoPet" placeholder="Digite o seu nome" th:field="*{nome}" value="" required>
+                            <div class="invalid-feedback">
+                              Por favor, informe o nome.
+                            </div>                         
+                          </div>
+                            <div class="form-group">
+                              <label for="cpfDono" class="form-label">CPF</label>
+                              <input type="text" class="form-control" id="cpfDono" maxlength="14" onkeyup="$(this).mask('000.000.000-00')" placeholder="Digite seu CPF" th:field="*{cpf}"required>
+                              <div id="erro-cpf" class="invalid-feedback">
+                                Por favor, informe o CPF.
+                              </div>  
+                            </div>
+                            <div class="form-group">
+                              <label for="telefoneDono" class="form-label">Telefone</label>
+                              <input type="text" class="form-control" id="telefoneDono" onkeypress="$(this).mask('(00) 0000-00009')" placeholder="Digite seu telefone" th:field="*{telefone}">
+                              <div class="invalid-feedback">
+                                Por favor, informe o telefone.
+                              </div> 
+                            </div>
+                            <div class="form-group">
+                              <label for="dtNascDonoPet" class="form-label">Data de Nascimento</label>
+                              <input type="date" class="form-control" id="dtNascDonoPet" placeholder="Digite sua data de nascimento" required>
+                              <div class="invalid-feedback">
+                                Por favor, informe a data de nascimento.
+                              </div> 
+                            </div>
+                           <!-- <div class="form-group">
+                              <h4 class="mb-1">Genero</h4>
+                              <select class="form-control"></select>
+                               <option th:each="genero : ${T(br.com.pethoteis.demo.Enum.Genero).value()}" th:value="${genero}" th:text="${genero}"></option> 
+                            </div> -->
+                            <div class="form-group">
+                              <h4 class="mb-3">Informações para acesso</h4>
+                              <label for="emailDonoDoPet" class="form-label">E-mail</label>
+                              <input type="email" class="form-control" id="emailDonoDoPet" placeholder="Digite seu e-mail" th:field="*{email}" required>
+                              <div class="invalid-feedback">
+                                Por favor, informe o e-mail.
+                              </div> 
+                              <label for="senhaDonoDoPet" class="form-label">Confirmação da senha</label>
+                              <input type="password" class="form-control" id="senhaDonoDoPet" placeholder="Digite a senha" th:field="*{senha}" required>
+                              <div class="invalid-feedback">
+                                Por favor, informe a senha.
+                              </div>
+                              <label for="confSenhaDonoDoPet" class="form-label">Confirmação da senha</label>
+                              <input type="password" class="form-control" id="confSenhaDonoDoPet" placeholder="Digite novamente a senha" th:field="*{confSenha}"  required>
+                              <div class="invalid-feedback">
+                                Por favor, informe a senha novamente.
+                              </div>
+                            </div>    
+
+                      
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                      <button type="submit" class="btn btn-primary">Cadastrar</button>
+                    </div>                      
+                  </div>
+                </form>
+          </div>
       </div>
-      <div class="col-auto">
-        <button class="btn btn-primary">Pesquisar</button>
-      </div>
+  </div>
+     
     </div>
-  </div> <br>
-  <div class="table-responsive">
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Nome do Pet</th>
-        <th scope="col">Idade</th>
-        <th scope="col">Ações</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr scope="row g-3" th:each="pet : ${petList} ">
-        <td th:text="${pet.nomePet}"></td>
-        <td th:text="${pet.idade}"></td>
-        <td>
-          <a class="btn btn-primary" th:href="@{alterarpet/{codigo}(codigo=${pet.codigo})}">
-            <i class="fas fa-edit"></i>Editar </a>
-          <a class="btn btn-danger" th:href="@{excluir/{codigo}(codigo=${pet.codigo})}">
-            <i class="fas fa-times"></i>Excluir </a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+  </main>
 </div>
 
-<script src="/materialize/bootstrap-5.2.1-dist/js/bootstrap.bundle.js"></script>
+    <script src="/materialize/bootstrap-5.2.1-dist/js/bootstrap.bundle.js"></script>
 
-<script src="../js/form-validation.js"></script>
+      <script src="../js/form-validation.js"></script>
 
-<script src="../js/cadastrodopet.js"></script>
-</body>
-
+      <script src="/src/main/resources/static/materialize/js/cadastrodonopet.js"></script>
+  </body>
 </html>
